...

import Foundation

struct Constants {
    // MARK: - Account Numbers
    struct AccountNumbers {
        static let rapidSave = "02-1244-0267945-001"
        static let youMoney = "02-1244-0267945-000"
        static let samplePayee = "02-1234-5678901-002"
    }
    
    // MARK: - Animation Durations
    struct Animation {
...
